--- a/Redirect.html
+++ b/Redirect.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Page</title>
+  <title>Successfully redirected!</title>
   <style>
     body {
       background-color: #333333;
@@ -17,11 +17,11 @@
     }
 
     h1 {
-      font-size: 4em;
+      font-size: 3.5em;
     }
   </style>
 </head>
 <body>
-  <h1>Test</h1>
+  <h1>Successfully redirected! You can close this page now.</h1>
 </body>
 </html>
