--- a/Redirect.html
+++ b/Redirect.html
@@ -7,7 +7,7 @@
   <style>
     body {
       background-color: #333333;
-      color: #fff;
+      color: ##dedede;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       display: flex;
@@ -17,7 +17,7 @@
     }
 
     h1 {
-      font-size: 3.5em;
+      font-size: 2.5em;
     }
   </style>
 </head>
