--- a/Redirect.html
+++ b/Redirect.html
@@ -7,7 +7,7 @@
   <style>
     body {
       background-color: #333333;
-      color: ##dedede;
+      color: #dedede;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       display: flex;
